WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277178
Viewer: Switching tabs while exiting pip crashes web content process
https://bugs.webkit.org/show_bug.cgi?id=277178
Summary
Viewer: Switching tabs while exiting pip crashes web content process
Dana Estra
Reported
2024-07-26 15:25:06 PDT
Viewer: Switching tabs while exiting pip crashes web content process
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2024-07-26 15:36:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31322
EWS
Comment 2
2024-07-28 21:25:50 PDT
Committed
281480@main
(3e346bcca08a): <
https://commits.webkit.org/281480@main
> Reviewed commits have been landed. Closing PR #31322 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-28 21:26:14 PDT
<
rdar://problem/132697646
>
Alexey Proskuryakov
Comment 4
2024-07-29 16:07:28 PDT
***
Bug 277177
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2024-07-29 17:04:51 PDT
Committed
280938.151@safari-7619-branch
(59f899358250): <
https://commits.webkit.org/280938.151@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1516 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug